2017-11-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-858

	* src/m_basic_types.h (IndexSetToLast): New generic WSM. Very
	similar to nelemGet, but needed due to the very stupid idea of
	some programming languages to use zero-based indexing!

	The idea is to simplify the setting of index variables, to ensure
	consistency between different parts of a cfile. A small example:

	retrievalAddScatSpecies( species  = "IWC", ... )
	IndexCreate( i_iwc )
        IndexSetToLast( i_iwc, jacobian_quantities )
	...
	xClip( ijq = i_iwc, limit_low=1e-9 )

2017-11-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-857

	* src/m_surface.cc (surfaceTessem): Fixed computation of Q component
	and related coefficients.

2017-11-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-856

	* src/m_oem.cc (xClip): New WSM.

	(Tensor4Clip): New, but not yet activated.

	* src/m_microphysics.cc (psdXXX): Corrected error message.

2017-11-02  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-855

	* src/m_surface.cc: Added WSM to calculate surface emisison
	and reflexivity using TESSEM.

	* src/methods.cc: Added md_data entry for new WSM.

2017-11-02  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-854
	
	* src/jacobian.cc:  Added an OK for having 1-long grids
	and same vector as retrieval coordinates in the grid-tests.
	
	*  src/linemixingdata.{cc,h}: Added a SetInternalDerivatives
	function to make it to set partial derivatives vector
	
	* src/linescaling{h,cc}:  Bug fix for 
	dstimulated_relative_emission_dT.  Missed the actual temperature
	dependency in my copy-paste creation of this prior...
	
	* src/lineshapesdata.{cc,h}:  Fixed so that Voigt, Doppler,
	Lorentz, all types of mirroring, cutoff, all types of 
	normalization, and line mixing partial derivatives works for
	temperature, frequency/wind, all pressure broadening parameters,
	all rescaling line mixing parameters.  Need to still test that